src/index/tests/snapshots/rusty__index__tests__index_tests__fb_parameters_variable_type.snap
---
source: src/index/tests/index_tests.rs
expression: members
---
[
    VariableIndexEntry {
        name: "__vtable",
        qualified_name: "fb.__vtable",
        initial_value: None,
        argument_type: ByVal(
            Local,
        ),
        is_constant: false,
        is_var_external: false,
        data_type_name: "__VOID_POINTER",
        location_in_parent: 0,
        linkage: Internal,
        binding: None,
        source_location: SourceLocation {
            span: None,
        },
        varargs: None,
    },
    VariableIndexEntry {
        name: "input1",
        qualified_name: "fb.input1",
        initial_value: None,
        argument_type: ByVal(
            Input,
        ),
        is_constant: false,
        is_var_external: false,
        data_type_name: "INT",
        location_in_parent: 1,
        linkage: Internal,
        binding: None,
        source_location: SourceLocation {
            span: Range(3:12 - 3:18),
            file: Some(
                "<internal>",
            ),
        },
        varargs: None,
    },
    VariableIndexEntry {
        name: "output1",
        qualified_name: "fb.output1",
        initial_value: None,
        argument_type: ByVal(
            Output,
        ),
        is_constant: false,
        is_var_external: false,
        data_type_name: "INT",
        location_in_parent: 2,
        linkage: Internal,
        binding: None,
        source_location: SourceLocation {
            span: Range(6:12 - 6:19),
            file: Some(
                "<internal>",
            ),
        },
        varargs: None,
    },
    VariableIndexEntry {
        name: "inout1",
        qualified_name: "fb.inout1",
        initial_value: None,
        argument_type: ByRef(
            InOut,
        ),
        is_constant: false,
        is_var_external: false,
        data_type_name: "__auto_pointer_to_INT",
        location_in_parent: 3,
        linkage: Internal,
        binding: None,
        source_location: SourceLocation {
            span: Range(9:12 - 9:18),
            file: Some(
                "<internal>",
            ),
        },
        varargs: None,
    },
]
