src/index/tests/snapshots/rusty__index__tests__index_tests__function_parameters_variable_type.snap
---
source: src/index/tests/index_tests.rs
expression: members
---
[
    VariableIndexEntry {
        name: "input1",
        qualified_name: "foo.input1",
        initial_value: None,
        argument_type: ByVal(
            Input,
        ),
        is_constant: false,
        data_type_name: "INT",
        location_in_parent: 0,
        linkage: Internal,
        binding: None,
        source_location: SymbolLocation {
            line_number: 3,
            source_range: SourceRange {
                range: 37..43,
            },
        },
        varargs: None,
        accessing_type: None,
    },
    VariableIndexEntry {
        name: "output1",
        qualified_name: "foo.output1",
        initial_value: None,
        argument_type: ByRef(
            Output,
        ),
        is_constant: false,
        data_type_name: "__auto_pointer_to_INT",
        location_in_parent: 1,
        linkage: Internal,
        binding: None,
        source_location: SymbolLocation {
            line_number: 6,
            source_range: SourceRange {
                range: 77..84,
            },
        },
        varargs: None,
        accessing_type: None,
    },
    VariableIndexEntry {
        name: "inout1",
        qualified_name: "foo.inout1",
        initial_value: None,
        argument_type: ByRef(
            InOut,
        ),
        is_constant: false,
        data_type_name: "__auto_pointer_to_INT",
        location_in_parent: 2,
        linkage: Internal,
        binding: None,
        source_location: SymbolLocation {
            line_number: 9,
            source_range: SourceRange {
                range: 118..124,
            },
        },
        varargs: None,
        accessing_type: None,
    },
    VariableIndexEntry {
        name: "foo",
        qualified_name: "foo.foo",
        initial_value: None,
        argument_type: ByVal(
            Return,
        ),
        is_constant: false,
        data_type_name: "INT",
        location_in_parent: 3,
        linkage: Internal,
        binding: None,
        source_location: SymbolLocation {
            line_number: 1,
            source_range: SourceRange {
                range: 12..15,
            },
        },
        varargs: None,
        accessing_type: None,
    },
]
