src/index/tests/snapshots/rusty__index__tests__index_tests__pre_processing_generates_array_of_array_type-2.snap
---
source: src/index/tests/index_tests.rs
expression: original
---
UserTypeDeclaration {
    data_type: ArrayType {
        name: Some(
            "arr_arr",
        ),
        bounds: RangeStatement {
            start: LiteralInteger {
                value: 0,
            },
            end: LiteralInteger {
                value: 1,
            },
        },
        referenced_type: DataTypeReference {
            referenced_type: "__arr_arr",
        },
        is_variable_length: false,
    },
    initializer: None,
    scope: None,
}
