src/index/tests/snapshots/rusty__index__tests__index_tests__pre_processing_generates_inline_array_of_array_of_array-2.snap
---
source: src/index/tests/index_tests.rs
expression: new_array_type
---
UserTypeDeclaration {
    data_type: ArrayType {
        name: Some(
            "__foo_inline_array_",
        ),
        bounds: RangeStatement {
            start: LiteralInteger {
                value: 0,
            },
            end: LiteralInteger {
                value: 1,
            },
        },
        referenced_type: DataTypeReference {
            referenced_type: "__foo_inline_array__",
        },
        is_variable_length: false,
    },
    initializer: None,
    scope: Some(
        "foo",
    ),
}
