src/index/tests/snapshots/rusty__index__tests__index_tests__pre_processing_generates_inline_arrays.snap
---
source: src/index/tests/index_tests.rs
expression: new_array_type
---
UserTypeDeclaration {
    data_type: ArrayType {
        name: Some(
            "__foo_inline_array",
        ),
        bounds: RangeStatement {
            start: LiteralInteger {
                value: 0,
            },
            end: LiteralInteger {
                value: 1,
            },
        },
        referenced_type: DataTypeReference {
            referenced_type: "INT",
        },
        is_variable_length: false,
    },
    initializer: None,
    scope: Some(
        "foo",
    ),
}
